# daily-canvas

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  storage.rs
src/components/: NewCanvasDialog.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx
src/components/calendar/: WeekView.tsx
src/components/canvas/: AiResponseShape.tsx  CanvasLinkShape.tsx  CanvasWorkspace.tsx  LinkCardShape.tsx  NoteBlockShape.tsx  PdfEmbedShape.tsx
src/components/editor/: NoteEditor.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: ai.ts  dates.ts  dayHub.ts  storage.ts
src/types/: canvas.ts
